ADDED Entity Model, Reposytories and Services, CHANGED Same Controllers
